Fri Dec 21 12:55:39 2007  Tanaka Akira  <akr@fsij.org>

	* lib/runit, lib/rubyunit.rb, test/testunit/runit: removed.

Fri Dec 21 12:45:49 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_chomp_bang): avoid unnecessary loop using
	  ONIGENC_LEFT_ADJUST_CHAR_HEAD().

Fri Dec 21 12:32:08 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (Init_File): File.exists? revived.

	* dir.c (Init_Dir): Dir.exists? again.

Fri Dec 21 12:26:36 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c: remove "illegal".

Fri Dec 21 12:22:20 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* keywords, parse.y (__ENCODING__): represent script encoding.

Fri Dec 21 12:16:50 2007  Tanaka Akira  <akr@fsij.org>

	* string.c (rb_str_is_ascii_only_p): new method ascii_only?.

Fri Dec 21 12:11:57 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_mode_enc): set default external encoding if no
	  encoding specified explicitly.

Fri Dec 21 12:00:34 2007  Tanaka Akira  <akr@fsij.org>

	* configure.in: check langinfo.h and locale.h.

	* encoding.c: use langinfo.h only if available.

	* main.c: use locale.h only if available.

Fri Dec 21 11:47:56 2007  Tanaka Akira  <akr@fsij.org>

	* encoding.c: include locale.h
	  (rb_locale_charmap): new method Encoding.locale_charmap for
	  nl_langinfo(CODESET).

	* include/ruby/encoding.h (rb_locale_charmap): declared.

	* main.c (main): call setlocale with LC_CTYPE.

	* ruby.c (locale_encoding): use rb_locale_charmap.

Fri Dec 21 11:35:10 2007  Koichi Sasada  <ko1@atdot.net>

	* vm.c, vm_dump.c: fix typo.  Reported by Yuki Mitsui.

Fri Dec 21 11:28:00 2007  Tanaka Akira  <akr@fsij.org>

	* regerror.c, string.c, io.c, lib/getoptlong.rb, lib/net/imap.rb,
	  compile.c, sprintf.c, parse.y, ext/win32ole/win32ole.c,
	  ext/tk/sample/demos-en/entry3.rb, ext/tk/lib/tcltk.rb,
	  ext/openssl/ossl_bn.c, numeric.c, vm.c,
	  benchmark/bm_so_meteor_contest.rb, bignum.c, ruby.c: don't "illegal"
	  for non law violation context.
